# rust-midi-patcher

./: .travis.yml  Cargo.toml  README.md
config/: config.risp
patches/: amazon.risp  bahnhof.risp  entropie.risp  feinde.risp  fensterscheiben.risp  fluss.risp  kirschblueten.risp  kitchensink.risp  messenger.risp  musikant.risp  polly.risp  quioma.risp  science-fiction.risp  tiefseeangler.risp
patches/carla/: diktator.carxp  diktator.json  endzeit.carxp  endzeit.json  liebt-uns.carxp  liebt-uns.json  system.carxp  system.json  wahrheit.carxp  wahrheit.json  young.carxp  young.json
src/: absolute_sleep.rs  carla_starter.rs  config.rs  effect.rs  load_patches.rs  main.rs  microkorg.rs  midi_beat_tracker.rs  midi_devices.rs  midi_event.rs  midi_notes.rs  patch.rs  trigger.rs  utils.rs  virtual_midi.rs  watch.rs
src/effects/: button_melody.rs  button_melody_sustaining.rs  control_forwarder.rs  control_multiplier.rs  control_sequence_stepper.rs  control_sequencer.rs  control_to_pitch_forwarder.rs  effect.rs  harmony_drum.rs  midi_forwarder.rs  mod.rs  note_sequencer.rs  pedal_button.rs  pedal_melody.rs  sweep_down.rs
src/songs/: amazon.risp  amazon.rs  endstation_paradies.rs  harmony_drum_test.rs  kirschblueten.rs  polly.rs  test.rs
src/songs/endstation/: diktator.rs  liebt_uns.rs  mod.rs
src/utils/: midi_filter.rs  mod.rs  range_mapper.rs
src/view/: main_view.rs
