[package]
name = "rust_midi_patcher"
version = "0.1.0"
authors = ["shybyte <ein@volloeko.de>"]

[dependencies]
#midi2opc = { git = "https://github.com/shybyte/midi2opc" }
midi2opc = { path = '../midi2opc' }
midi-message = { git = "https://github.com/shybyte/midi-message-rs" }
portmidi = "^0.2.4"
chan-signal = "0.2.0"
chan = "0.1.19"
risp = "^0.6.1"
notify = "4.0.1"

[patch.crates-io]
#"risp" = { path = '../risp' }
